RESOLVED FIXED208945
[macOS] Crash under WebKit::WebProcessPool::platformInitialize()
https://bugs.webkit.org/show_bug.cgi?id=208945
Summary [macOS] Crash under WebKit::WebProcessPool::platformInitialize()
Per Arne Vollan
Reported 2020-03-11 14:05:59 PDT
Fix null pointer crash on macOS under WebKit::WebProcessPool::platformInitialize().
Attachments
Patch (4.27 KB, patch)
2020-03-11 14:12 PDT, Per Arne Vollan
bfulgham: review+
Patch (2.48 KB, patch)
2020-03-11 14:56 PDT, Per Arne Vollan
thorton: review+
Patch (1.64 KB, patch)
2020-03-11 15:17 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2020-03-11 14:06:14 PDT
Per Arne Vollan
Comment 2 2020-03-11 14:12:13 PDT
Brent Fulgham
Comment 3 2020-03-11 14:19:36 PDT
Comment on attachment 393287 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=393287&action=review r=me > Source/WTF/wtf/cocoa/SoftLinking.h:53 > +} I am shocked this doesn't already exist -- but it doesn't! > Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:702 > + [[NSNotificationCenter defaultCenter] removeObserver:m_accessibilityEnabledObserver.get()]; Isn't it okay to remove nil objects? I can't remember (though of course, some containers blow up if you use nil things so maybe this is one of those cases).
Per Arne Vollan
Comment 4 2020-03-11 14:25:58 PDT
Per Arne Vollan
Comment 5 2020-03-11 14:31:25 PDT
(In reply to Brent Fulgham from comment #3) > Comment on attachment 393287 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=393287&action=review > > r=me > > > Source/WTF/wtf/cocoa/SoftLinking.h:53 > > +} > > I am shocked this doesn't already exist -- but it doesn't! > > > Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:702 > > + [[NSNotificationCenter defaultCenter] removeObserver:m_accessibilityEnabledObserver.get()]; > > Isn't it okay to remove nil objects? I can't remember (though of course, > some containers blow up if you use nil things so maybe this is one of those > cases). I believe the null check is needed. Thanks for reviewing!
Per Arne Vollan
Comment 6 2020-03-11 14:56:02 PDT
Reopening to attach new patch.
Per Arne Vollan
Comment 7 2020-03-11 14:56:03 PDT
Brent Fulgham
Comment 8 2020-03-11 14:58:47 PDT
Comment on attachment 393291 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=393291&action=review Looks like Tim already got it, but r=me, too! > Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:458 > + if (libAccessibilityLibrary() && _AXSApplicationAccessibilityEnabled()) { Oops!
Per Arne Vollan
Comment 9 2020-03-11 15:17:34 PDT
Per Arne Vollan
Comment 10 2020-03-11 15:19:06 PDT
Committed unreviewed build fix: <https://trac.webkit.org/changeset/258289/webkit>
Note You need to log in before you can comment on or make changes to this bug.