[macOS] Crash under WebKit::WebProcessPool::platformInitialize() https://bugs.webkit.org/show_bug.cgi?id=208945 Source/WebKit:

<rdar://problem/60330751>

Reviewed by Brent Fulgham.

Check that accessibility library is present before attempting to use constants from it.

No new tests, since I am unable to reproduce.

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::registerNotificationObservers):
(WebKit::WebProcessPool::unregisterNotificationObservers):

Source/WTF:


Reviewed by Brent Fulgham.

Add macro to optionally soft link library.

* wtf/cocoa/SoftLinking.h:



Canonical link: https://commits.webkit.org/221862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258284 268f45cc-cd09-0410-ab3c-d52691b4dbfc